# churn-service

./: Dockerfile  main.py  predict.py  pyproject.toml  scratch  starter.ipynb  train.py
