[project]
name = "churn"
version = "0.1.0"
description = "Churn Prediction Service using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pandas-stubs>=2.3.2.250926",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]
